--- a/ChoreBuddies.Frontend/Features/Authentication/Login.razor
+++ b/ChoreBuddies.Frontend/Features/Authentication/Login.razor
@@ -6,6 +6,7 @@
 <AuthorizeView>
     <Authorized>
         @{
+            Console.WriteLine("User is already authorized, redirecting to home page.");
             navigationManager.NavigateTo("/");
         }
     </Authorized>
