--- a/ChoreBuddies.Frontend/UI/Layout/MainLayout.razor
+++ b/ChoreBuddies.Frontend/UI/Layout/MainLayout.razor
@@ -109,7 +109,7 @@
                                     {
                                         <div class="pa-4 flex-grow-1 d-flex flex-column" style="min-height: 0">
                                             <MudText Typo="Typo.subtitle2" Class="mb-3">Recent Chat</MudText>
-                                            @* <ChoreBuddies.Frontend.Features.Chat.HouseholdChat IsSidebar="true"/> *@
+                                            <ChoreBuddies.Frontend.Features.Chat.HouseholdChat IsSidebar="true"/>
                                         </div>
                                     }
                                 </div>
