--- a/ChoreBuddies.Frontend/UI/App.razor
+++ b/ChoreBuddies.Frontend/UI/App.razor
@@ -1,6 +1,8 @@
-﻿@using ChoreBuddies.Frontend.Features.User
-@inject IUserService _userService
+﻿@using ChoreBuddies.Frontend.Features.Authentication
+@inject IAuthService _authService
 @inject NavigationManager _navigationManager
+@inject AuthenticationStateProvider _authenticationStateProvider
+
 
 <CascadingAuthenticationState>
     <Router AppAssembly="@typeof(App).Assembly" OnNavigateAsync="HandleNavigation">
@@ -34,11 +36,17 @@
     {
         // Do NOT check for these routes (avoid redirect loop)
         var path = context.Path.ToLower();
-        if (path == "household/setup" || path == "login" || path == "signup" || path == "household/join" || path == "household/create")
+        if (path == "household/setup" ||
+            path == "login" ||
+            path == "signup" ||
+            path == "household/join" ||
+            path == "household/create")
             return;
 
-        var user = await _userService.GetCurrentUserAsync();
-        if (user is not null && user.householdId is null)
+        var authState = await _authenticationStateProvider.GetAuthenticationStateAsync();
+        var user = authState.User;
+        var householdId = await _authService.GetHouseholdIdAsync();
+        if (user.Identity?.IsAuthenticated ?? false && householdId < 0)
         {
             _navigationManager.NavigateTo("/household/setup", true);
         }
