--- a/ChoreBuddies.Frontend/UI/Components/Chores/Activity.razor
+++ b/ChoreBuddies.Frontend/UI/Components/Chores/Activity.razor
@@ -1,13 +1,15 @@
-﻿<MudPaper Elevation="0" Class="pa-2">
+﻿@using Shared.Chores
+
+<MudPaper Elevation="0" Class="pa-2">
     <MudGrid>
         <MudItem xs="1">
             <MudPaper Elevation="0" Class="icon-box">
-                <MudIcon Icon="@Icon" Size = "Size.Medium"/>
+                <MudIcon Icon="@GetIcon()" Size = "Size.Medium"/>
             </MudPaper>
         </MudItem>
         <MudItem xs="7" Class="align-center">
-            <MudText Typo="Typo.body1" Class="fw-bold">@Title</MudText>
-            <MudText Typo="Typo.body2">@Status</MudText>
+            <MudText Typo="Typo.body1" Class="fw-bold">@GetTitle()</MudText>
+            <MudText Typo="Typo.body2">@GetStatus()</MudText>
         </MudItem>
         <MudItem xs="4" Class="d-flex justify-end align-center">
             <MudButton Variant="Variant.Outlined" Color="Color.Secondary">
@@ -18,9 +20,17 @@
 </MudPaper>
 
 @code {
-    [Parameter] public string? Title { get; set; }
-    [Parameter] public string? Status { get; set; }
-    [Parameter] public string? Icon { get; set; }
+    [Parameter] public ChoreDto? _choreDto { get; set; }
+    public string? GetTitle() => _choreDto?.Name;
+    public string? GetStatus()
+    {
+        if(_choreDto?.Status == Status.Assigned)
+        {
+            return $"Assigned to {_choreDto.Name}";
+        }
+        return _choreDto?.Status.ToString();
+    }
+    public string? GetIcon() => MudBlazor.FontIcons.MaterialSymbols.Outlined.CheckCircle;
 }
 
 <style>
