--- a/ChoreBuddies.Frontend/UI/App.razor
+++ b/ChoreBuddies.Frontend/UI/App.razor
@@ -46,7 +46,7 @@
         var authState = await _authenticationStateProvider.GetAuthenticationStateAsync();
         var user = authState.User;
         var householdId = await _authService.GetHouseholdIdAsync();
-        if (user.Identity?.IsAuthenticated ?? false && householdId < 0)
+        if ((user.Identity?.IsAuthenticated ?? false) && householdId < 0)
         {
             _navigationManager.NavigateTo("/household/setup", true);
         }
