--- a/ChoreBuddies.Frontend/UI/Layout/MainLayout.razor
+++ b/ChoreBuddies.Frontend/UI/Layout/MainLayout.razor
@@ -243,12 +243,12 @@
 
     private void AddNewTask()
     {
-        Navigation.NavigateTo("/tasks/new");
+        Navigation.NavigateTo("/chores/new");
     }
 
     private void ViewAllTasks()
     {
-        Navigation.NavigateTo("/tasks");
+        Navigation.NavigateTo("/chores");
     }
 
     private void RedeemRewards()
