--- a/ChoreBuddies.Frontend/UI/Components/Chores/UpcomingChore.razor
+++ b/ChoreBuddies.Frontend/UI/Components/Chores/UpcomingChore.razor
@@ -2,6 +2,7 @@
 @using Shared.Chores
 
 @inject IChoresService choresService
+@inject NavigationManager navigationManager
 
 <MudPaper Elevation="1" Class="pa-4 rounded-lg">
     <MudGrid>
@@ -10,7 +11,7 @@
             <MudText Typo="Typo.h6">@GetTitle()</MudText>
             <MudText Typo="Typo.body2">@GetDescription()</MudText>
 
-            <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="mt-2"> @*TODO: Add navigation to chores when they're done*@
+            <MudButton Variant="Variant.Filled" Color="Color.Primary" Class="mt-2" OnClick="ViewChoreDetails">
                 View Task →
             </MudButton>
         </MudItem>
@@ -20,7 +21,7 @@
                 <MudButton Color="Color.Default" Variant="Variant.Outlined" Class="mt-1"> @*TODO: Add navigation to chores when they're done*@
                     Set a reminder
                 </MudButton>
-                <MudButton Color="Color.Default" Variant="Variant.Outlined" Class="mt-1" @OnClick=""> @*TODO: Add navigation to chores when they're done*@
+                <MudButton Color="Color.Default" Variant="Variant.Outlined" Class="mt-1"> @*TODO: Add navigation to chores when they're done*@
                     Mark as done
                 </MudButton>
             </MudStack>
@@ -33,15 +34,5 @@
     public string? GetTitle() => _choreDto?.Name;
     public string? GetDescription() => _choreDto?.Description;
     public string? GetDueText() => _choreDto?.DueDate.ToString();
-    public async Task MarkChoreAsDone()
-    {
-        if(_choreDto is not null)
-        {
-            var result = await choresService.UpdateChoreAsync(_choreDto with { Status = Status.Completed });
-            if(result is not null)
-            {
-                _choreDto = result;
-            }
-        }
-    }
+    public void ViewChoreDetails() => navigationManager.NavigateTo($"/chore-details/{_choreDto!.Id}");
 }
