--- a/ChoreBuddies.Frontend/UI/Layout/MainLayout.razor
+++ b/ChoreBuddies.Frontend/UI/Layout/MainLayout.razor
@@ -23,7 +23,7 @@
                 {
                     <div class="d-none d-md-block">
                         <MudButton Class="app-bar" OnClick="@(() => Navigation.NavigateTo("/dashboard"))">Dashboard</MudButton>
-                        <MudButton Class="app-bar" OnClick="@(() => Navigation.NavigateTo("/tasks"))">Tasks</MudButton>
+                        <MudButton Class="app-bar" OnClick="@(() => Navigation.NavigateTo("/chores"))">Chores</MudButton>
                         <MudButton Class="app-bar" OnClick="@(() => Navigation.NavigateTo("/rewards"))">Rewards</MudButton>
                         <MudButton Class="app-bar" OnClick="@(() => Navigation.NavigateTo("/chat"))">Chat</MudButton>
                         <MudMenu Class="app-bar" Label="Settings"  AnchorOrigin="Origin.BottomLeft" ActivationEvent="@MouseEvent.MouseOver">
@@ -52,7 +52,7 @@
                     @if (_showFullHouseLayout)
                     {
                         <MudNavLink Href="/dashboard" Icon="@Icons.Material.Filled.Dashboard">Dashboard</MudNavLink>
-                        <MudNavLink Href="/tasks" Icon="@Icons.Material.Filled.Task">Tasks</MudNavLink>                    <MudNavLink Href="/rewards" Icon="@Icons.Material.Filled.Star">Rewards</MudNavLink>                    <MudNavLink Href="/chat" Icon="@Icons.Material.Filled.Chat">Chat</MudNavLink>
+                        <MudNavLink Href="/chores" Icon="@Icons.Material.Filled.Task">Chores</MudNavLink>                    <MudNavLink Href="/rewards" Icon="@Icons.Material.Filled.Star">Rewards</MudNavLink>                    <MudNavLink Href="/chat" Icon="@Icons.Material.Filled.Chat">Chat</MudNavLink>
                         <MudNavLink Href="/settings" Icon="@Icons.Material.Filled.Settings">Settings</MudNavLink>
                     }
                 </MudNavMenu>
@@ -84,16 +84,16 @@
                                                     Variant="Variant.Filled"
                                                     FullWidth="true"
                                                     Class="mb-2"
-                                                    OnClick="@AddNewTask">
-                                            Add New Task
+                                                    OnClick="@AddNewChore">
+                                            Add New Chore
                                         </MudButton>
                                         <MudButton StartIcon="@Icons.Material.Filled.List"
                                                     Color="Color.Default"
                                                     Variant="Variant.Outlined"
                                                     FullWidth="true"
                                                     Class="mb-2"
-                                                    OnClick="@ViewAllTasks">
-                                            View All Tasks
+                                                    OnClick="@ViewAllChores">
+                                            View All Chores
                                         </MudButton>
                                         <MudButton StartIcon="@Icons.Material.Filled.CardGiftcard"
                                                     Color="Color.Default"
@@ -241,12 +241,12 @@
     }
 
 
-    private void AddNewTask()
+    private void AddNewChore()
     {
         Navigation.NavigateTo("/chores/new");
     }
 
-    private void ViewAllTasks()
+    private void ViewAllChores()
     {
         Navigation.NavigateTo("/chores");
     }
