--- a/ChoreBuddies.Frontend/Features/Chores/ChoreDetails.razor
+++ b/ChoreBuddies.Frontend/Features/Chores/ChoreDetails.razor
@@ -7,7 +7,7 @@
 @inject IAuthService authService
 @inject NavigationManager navigationManager
 @inject ISnackbar Snackbar
-@inject Chores.IChoresService choresService
+@inject IChoresService choresService
 @inject User.IUserService userService
 
 <MudContainer MaxWidth="MaxWidth.Medium" Class="mt-8">
