change duedate to at end of day

--- a/ChoreBuddies.Frontend/Features/Chores/ChoreDetails.razor
+++ b/ChoreBuddies.Frontend/Features/Chores/ChoreDetails.razor
@@ -3,6 +3,7 @@
 @using Shared.Chores
 @using Shared.Users
 @using System.ComponentModel.DataAnnotations
+@using Utilities
 
 @inject IAuthService authService
 @inject NavigationManager navigationManager
@@ -201,13 +202,13 @@
             {
                 result = await choresService.UpdateChoreAsync(
                 new ChoreDto(chore!.Id, model.ChoreName!, model?.Description ?? String.Empty, model?.AssignedTo?.Id,
-                    chore.HouseholdId, model?.DueDate, chore.Status, chore.Room, model?.RewardPoints ?? 0));
+                    chore.HouseholdId, model?.DueDate?.AtEndOfDay(), chore.Status, chore.Room, model?.RewardPoints ?? 0));
             }
             else if(CurrentMode == PageMode.Create)
             {
                 result = await choresService.CreateChoreAsync(
                     new CreateChoreDto(model.ChoreName!, model?.Description ?? String.Empty, model?.AssignedTo?.Id,
-                    chore?.HouseholdId ?? 0, model?.DueDate, 
+                    chore?.HouseholdId ?? 0, model?.DueDate?.AtEndOfDay(),
                     model?.AssignedTo?.Id > 0 ? Status.Assigned : Status.Unassigned, 
                     "", model?.RewardPoints ?? 0));
             }
