--- a/ChoreBuddies.Frontend/UI/Components/Chores/UpcomingChore.razor
+++ b/ChoreBuddies.Frontend/UI/Components/Chores/UpcomingChore.razor
@@ -4,6 +4,7 @@
 @inject IChoresService choresService
 @inject ISnackbar Snackbar
 @inject NavigationManager navigationManager
+@inject IDialogService DialogService
 
 <MudPaper Elevation="1" Class="pa-4 rounded-lg">
     <MudGrid>
@@ -19,7 +20,7 @@
 
         <MudItem xs="4" Class="d-flex justify-end align-center">
             <MudStack>
-                <MudButton Color="Color.Default" Variant="Variant.Outlined" Class="mt-1"> @*TODO: Add navigation to chores when they're done*@
+                <MudButton Color="Color.Default" Variant="Variant.Outlined" Class="mt-1" OnClick="OpenReminderDialog"> @*TODO: Add navigation to chores when they're done*@
                     Set a reminder
                 </MudButton>
                 <MudButton Color="Color.Default" Variant="Variant.Outlined" Class="mt-1" OnClick="MarkChoreAsDone">
@@ -49,4 +50,32 @@
             Snackbar.Add("An enexpected error occured while marking chore as done", Severity.Error);
         }
     }
+    private async Task OpenReminderDialog()
+    {
+        var parameters = new DialogParameters
+        {
+            ["Label"] = "Set reminder"
+        };
+
+        var options = new DialogOptions
+        {
+            CloseButton = true,
+            MaxWidth = MaxWidth.Small,
+            FullWidth = true
+        };
+
+        var dialog = await DialogService.ShowAsync<DateTimePickerPopUp>(
+            title: "",
+            parameters: parameters,
+            options: options);
+
+        var result = await dialog.Result;
+
+        if (!result.Canceled)
+        {
+            var dateTime = (DateTime)result.Data;
+            Console.WriteLine(dateTime);
+        }
+    }
+
 }
